src/app/components/admin-app/admin-app.component.scss
// Copyright 2021 Carnegie Mellon University. All Rights Reserved.
// Released under a MIT (SEI)-style license. See LICENSE.md in the project root for license information.

.appitems-container .mat-list-item {
  height: auto;
}

.appslist {
  margin-top: 10px;
  margin-bottom: 20px;
}

.nolink {
  text-decoration: none;
  cursor: pointer;
}

.appcontent-container {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.appbarmenu-container {
  min-width: 50px;
}

.lefticon {
  font-size: 75%;
  padding: 0.5em;
  padding-right: 1.5em;
  height: 35px;
  text-align: center;
  cursor: pointer;
}

.crucible-logo {
  position: absolute;
  bottom: 0;
}

.icon-text {
  margin-left: 10px;
  font-family: open_sansbold;
}

.player-icon {
  transform: scale(2);
  width: 60px;
}

.player-icon-small {
  transform: scale(1.1);
  width: 35px;
}

